feat: 施設から住所を参照するためにリレーションをSwaggerに追加
