# laravel/app/Models/Address.php
@@ -27,6 +27,15 @@ use OpenApi\Annotations as OA;
  *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-09-14T00:00:00Z"),
  *     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-09-14T00:00:00Z")
  * )
+ * @OA\Schema(
+ *     schema="AddressWithRelations",
+ *     allOf={
+ *         @OA\Schema(ref="#/components/schemas/Address"),
+ *         @OA\Schema(
+ *             @OA\Property(property="municipality", ref="#/components/schemas/MunicipalityWithPrefecture")
+ *         )
+ *     }
+ * )
  */
 class Address extends Model
 {
