# laravel/app/Models/Facility.php
@@ -28,6 +28,15 @@ use OpenApi\Annotations as OA;
  *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-09-14T00:00:00Z"),
  *     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-09-14T00:00:00Z")
  * )
+ * @OA\Schema(
+ *     schema="FacilityWithRelations",
+ *     allOf={
+ *         @OA\Schema(ref="#/components/schemas/Facility"),
+ *         @OA\Schema(
+ *             @OA\Property(property="address", ref="#/components/schemas/AddressWithRelations")
+ *         )
+ *     }
+ * )
  */
 class Facility extends Model
 {
